--- a/src/app/layouts/about/about.component.html
+++ b/src/app/layouts/about/about.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
     <div class="about">
-      <div class="about-details">
+      <div class="about-details" appFade="up" [delay]="200">
         <h2>About Me</h2>
         <h3 class="subtitle">An enthusiastic Web Developer based in California</h3>
         <p class="first-desc">I'm very passionate and dedicated to my work. With 5 years experience as a professional
@@ -13,7 +13,7 @@
           <button class="btn">Download CV</button>
         </a>
       </div>
-      <div class="about-img">
+      <div class="about-img" appFade="up">
         <img src="/assets/img/about.png" alt="Kate Moore">
       </div>
     </div>
