--- a/src/app/layouts/landing/landing.component.html
+++ b/src/app/layouts/landing/landing.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="container">
     <div class="landing">
-      <div class="landing-details">
+      <div class="landing-details" appFade="up">
         <h3 class="profession">Web Developer</h3>
         <h1>Kate Moore</h1>
         <p class="description">I design and develop services for customers of all sizes,
@@ -41,7 +41,7 @@
         </ul>
       </div>
       <div class="landing-img">
-        <img src="/assets/img/banner.png" alt="Kate Moore">
+        <img ngSrc="/assets/img/banner.png" alt="Kate Moore" width="500" height="800" priority>
       </div>
     </div>
   </div>
