--- a/src/app/layouts/portfolio/portfolio.component.html
+++ b/src/app/layouts/portfolio/portfolio.component.html
@@ -5,7 +5,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, egestas. Id fermentum nullam ipsum massa.</p>
     </div>
     <div class="projects">
-      <div class="projects-card">
+      <div class="projects-card" appFade="left">
         <div>
           <img class="projects-card-logo" src="/assets/img/project1.png" alt="">
         </div>
@@ -25,7 +25,7 @@
           </a>
         </div>
       </div>
-      <div class="projects-card">
+      <div class="projects-card" appFade="left" [delay]="200">
         <div>
           <img class="projects-card-logo" src="/assets/img/project2.png" alt="">
         </div>
@@ -46,7 +46,7 @@
           </a>
         </div>
       </div>
-      <div class="projects-card">
+      <div class="projects-card" appFade="left" [delay]="400">
         <div>
           <img class="projects-card-logo" src="/assets/img/project3.png" alt="">
         </div>
