--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>Experience</h2>
     <div class="experience">
-      <div class="experience-card">
+      <div class="experience-card" appFade="up">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Software Engineer</h3>
           <span class="experience-card-info-date">Google | Remote</span>
@@ -18,7 +18,7 @@
             ea commodo consequat. Duis aute irure dolor.</p>
         </div>
       </div>
-      <div class="experience-card">
+      <div class="experience-card" appFade="up" [delay]="200">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Front-End Developer</h3>
           <span class="experience-card-info-date">GitHub | Office</span>
@@ -34,7 +34,7 @@
             ea commodo consequat. Duis aute irure dolor.</p>
         </div>
       </div>
-      <div class="experience-card">
+      <div class="experience-card" appFade="up" [delay]="400">
         <div class="experience-card-info">
           <h3 class="experience-card-info-title">Web Developer</h3>
           <span class="experience-card-info-date">Airbnb | Remote</span>
@@ -54,7 +54,7 @@
     <hr>
     <h2>Education & Skills</h2>
     <div class="education-skill">
-      <div class="education">
+      <div class="education" appFade="up">
         <div class="education-card">
           <span class="education-date">2013-2016</span>
           <h3 class="education-title">Master of Technology</h3>
@@ -71,7 +71,7 @@
           <span class="education-institute">Marble Hills Middle School</span>
         </div>
       </div>
-      <div class="skill">
+      <div class="skill" appFade="up" [delay]="200">
         <div class="skill-card">
           <h3 class="skill-count">92%</h3>
           <div class="skill-info">
@@ -104,7 +104,7 @@
           <div class="skill-info">
             <h4 class="skill-title">Ionic</h4>
             <div class="skill-progress">
-              <div class="skill-progress-inner skill-progress-80"></div>
+              <div class="skill-progress-inner"></div>
             </div>
           </div>
         </div>
