--- a/src/app/layouts/services/services.component.html
+++ b/src/app/layouts/services/services.component.html
@@ -6,21 +6,21 @@
         nullam ipsum massa.</p>
     </div>
     <div class="services">
-      <div class="services-card">
+      <div class="services-card" appFade="left">
         <h3 class="services-card-subtitle">Web Development</h3>
         <h3 class="services-card-title">Web Design & Logo</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
-      <div class="services-card">
+      <div class="services-card" appFade="left" [delay]="200">
         <h3 class="services-card-subtitle">App Development</h3>
         <h3 class="services-card-title">iOS & Android</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
-      <div class="services-card">
+      <div class="services-card" appFade="left" [delay]="400">
         <h4 class="services-card-subtitle">Marketing</h4>
         <h3 class="services-card-title">Digital Marketing</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
