--- a/src/app/layouts/testimonials/testimonials.component.html
+++ b/src/app/layouts/testimonials/testimonials.component.html
@@ -4,7 +4,7 @@
       <h2>Testimonials</h2>
       <p>People I've worked with have said some nice things...</p>
     </div>
-    <div class="testimonials">
+    <div class="testimonials" appFade="up">
       <app-carousel>
         <div class="testimonials-card">
           <img src="/assets/img/testimonial1.jpg" alt="Testimonial">
