Change images path

--- a/src/app/layouts/about/about.component.html
+++ b/src/app/layouts/about/about.component.html
@@ -9,12 +9,12 @@
           worked on
           various projects that are already live, I can help you with the best possible suggestions and ideas that we
           can proceed with.</p>
-        <a href="/assets/img/about.png" download="proposed_file_name">
+        <a href="assets/img/about.png" download="proposed_file_name">
           <button class="btn">Download CV</button>
         </a>
       </div>
       <div class="about-img" appFade="up">
-        <img src="/assets/img/about.png" alt="Kate Moore">
+        <img src="assets/img/about.png" alt="Kate Moore">
       </div>
     </div>
   </div>
