--- a/src/app/layouts/landing/landing.component.html
+++ b/src/app/layouts/landing/landing.component.html
@@ -41,7 +41,7 @@
         </ul>
       </div>
       <div class="landing-img">
-        <img ngSrc="/assets/img/banner.png" alt="Kate Moore" width="500" height="800" priority>
+        <img ngSrc="assets/img/banner.png" alt="Kate Moore" width="500" height="800" priority>
       </div>
     </div>
   </div>
