--- a/src/app/layouts/portfolio/portfolio.component.html
+++ b/src/app/layouts/portfolio/portfolio.component.html
@@ -7,7 +7,7 @@
     <div class="projects">
       <div class="projects-card" appFade="left">
         <div>
-          <img class="projects-card-logo" src="/assets/img/project1.png" alt="">
+          <img class="projects-card-logo" src="assets/img/project1.png" alt="">
         </div>
         <p class="projects-card-desc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         <div class="projects-card-actions">
@@ -27,7 +27,7 @@
       </div>
       <div class="projects-card" appFade="left" [delay]="200">
         <div>
-          <img class="projects-card-logo" src="/assets/img/project2.png" alt="">
+          <img class="projects-card-logo" src="assets/img/project2.png" alt="">
         </div>
         <p class="projects-card-desc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         <div class="projects-card-actions">
@@ -48,7 +48,7 @@
       </div>
       <div class="projects-card" appFade="left" [delay]="400">
         <div>
-          <img class="projects-card-logo" src="/assets/img/project3.png" alt="">
+          <img class="projects-card-logo" src="assets/img/project3.png" alt="">
         </div>
         <p class="projects-card-desc">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
         <div class="projects-card-actions">
