Add NgOptimizedImage directive to images

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
   <nav class="navigation">
     <div class="container">
       <a>
-        <img routerLink="/" fragment="landing" class="logo" src="assets/img/logo.svg" alt="">
+        <img routerLink="/" fragment="landing" class="logo" ngSrc="assets/img/logo.svg" alt="Logo" width="170"
+          height="24">
       </a>
       <svg class="btn-menu" xmlns="http://www.w3.org/2000/svg" height="1.50em" viewBox="0 0 448 512"
         (click)="openSidenav()">
