--- a/src/app/layouts/about/about.component.html
+++ b/src/app/layouts/about/about.component.html
@@ -14,7 +14,7 @@
         </a>
       </div>
       <div class="about-img" appFade="up">
-        <img src="assets/img/about.png" alt="Kate Moore">
+        <img ngSrc="assets/img/about.png" alt="Kate Moore" width="1200" height="800">
       </div>
     </div>
   </div>
