--- a/src/app/layouts/testimonials/testimonials.component.html
+++ b/src/app/layouts/testimonials/testimonials.component.html
@@ -7,7 +7,7 @@
     <div class="testimonials" appFade="up">
       <app-carousel>
         <div class="testimonials-card">
-          <img src="assets/img/testimonial1.jpg" alt="Testimonial">
+          <img ngSrc="assets/img/testimonial1.jpg" alt="Testimonial 1" width="96" height="96">
           <p class="testimonials-card-desc">I know I can count on your service if I need my project done fast and with
             the
             best possible result. I am a
@@ -16,7 +16,7 @@
           <h5>Project Manager</h5>
         </div>
         <div class="testimonials-card">
-          <img src="assets/img/testimonial2.jpg" alt="Testimonial">
+          <img ngSrc="assets/img/testimonial2.jpg" alt="Testimonial 2" width="96" height="96">
           <p class="testimonials-card-desc">We were looking for a logo with a touch of modernism. She grasped our needs
             and produced a stunning design. I will strongly recommend to my friends.</p>
           <h4>Alice Miles</h4>
