Increase footer font size on desktop

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import "./styles/_media-queries.scss";
+
 .footer {
   border-top: 1px solid rgb(203, 213, 225);
   padding-top: 0.875rem;
@@ -5,11 +7,17 @@
 }
 
 .coopyright {
-  font-size: 1rem;
+  font-size: 0.875rem;
   text-align: center;
 
   &>a {
     text-decoration: none;
     color: var(--text-color);
+  }
+}
+
+@include respond-above(md) {
+  .coopyright {
+    font-size: 1rem;
   }
 }
