feat: close sidenav when clicking a link

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="sidenav-body">
     <ul class="sidenav-list">
-      <li class="sidenav-item" *ngFor="let item of sidenavItems">
+      <li class="sidenav-item" *ngFor="let item of sidenavItems" (click)="close()">
         <a routerLink="/" [fragment]="item.link" [routerLinkActive]="item.activeClassName" [href]="item.link"
           [className]="item.className"
           [routerLinkActiveOptions]="{ matrixParams: 'exact', queryParams: 'exact', paths: 'exact', fragment: 'exact'}">
