--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   max-width: 100%;
   color: #212529;
-  background-color: #fff;
+  background-color: var(--body-color);
   background-clip: padding-box;
   outline: 0;
   position: fixed;
