--- a/src/app/layouts/landing/landing.component.scss
+++ b/src/app/layouts/landing/landing.component.scss
@@ -58,7 +58,7 @@ section {
   vertical-align: middle;
   line-height: 2;
   border-radius: 50%;
-  fill: var(--text-color);
+  fill: var(--social-icon-text-color);
   background: var(--social-icon-color);
   border-color: var(--social-icon-color);
   transition: background-color 0.15s ease-in-out;
