implement theme switcher

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navigation">
     <div class="container">
       <a>
-        <img routerLink="/" fragment="landing" class="logo" ngSrc="assets/img/logo.svg" alt="Logo" width="170"
+        <img routerLink="/" fragment="landing" class="logo" [src]='"assets/img/"+logoName+".svg"' alt="Logo" width="170"
           height="24">
       </a>
       <svg class="btn-menu" xmlns="http://www.w3.org/2000/svg" height="1.50em" viewBox="0 0 448 512"
@@ -22,6 +22,7 @@
               </a>
             </li>
           </ul>
+          <app-theme-switcher></app-theme-switcher>
         </div>
       </div>
       <div class="nav-backdrop" *ngIf="sidenavState === 'in'" (click)="closeSidenav()"></div>
