feat: support dark mode

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,13 +1,39 @@
-:root {
+body,
+body.light {
   --primary-color: #7f00fd;
+  --primary-color-rgb: 127, 0, 253;
   --primary-color-dark: #7200e4;
   --secondary-color: #F1F5F9;
+  --body-color: #fff;
   --text-color: #475569;
   --heading-color: #334155;
+  --nav-color: #fff;
   --nav-link-color: rgba(0, 0, 0, 0.65);
   --nav-link-hover-color: rgba(0, 0, 0, 0.8);
   --sidenav-toggler-color: rgba(0, 0, 0, 0.65);
   --sidenav-toggler-hover-color: rgba(0, 0, 0, 0.8);
+  --social-icon-text-color: #475569;
   --social-icon-color: #d8dbe1;
   --social-icon-hover-color: #cccfd7;
+  --border-color: rgb(203, 213, 225);
+  --border-focus-color: rgb(148, 163, 184);
+  --experience-border-color: rgba(11, 11, 19, 0.05);
+  --carousel-border-color: #E6ECF8;
+}
+
+body.dark {
+  --secondary-color: #232D3F;
+  --body-color: #1B2430;
+  --text-color: #DEE2E6;
+  --heading-color: #fff;
+  --nav-color: #232D3F;
+  --nav-link-color: rgba(255, 255, 255, 0.65);
+  --nav-link-hover-color: rgba(255, 255, 255, 0.8);
+  --sidenav-toggler-color: rgba(255, 255, 255, 0.65);
+  --sidenav-toggler-hover-color: rgba(255, 255, 255, 0.8);
+  --social-icon-text-color: #1B2430;
+  --border-color: rgb(73, 80, 87);
+  --border-focus-color: rgb(73, 80, 87);
+  --experience-border-color: #33383d;
+  --carousel-border-color: rgb(73, 80, 87);
 }
