--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,6 +26,9 @@ header {
   gap: 1rem;
   padding: 0;
   margin: 0;
+  border-right: 1px solid var(--border-color);
+  padding-right: 1rem;
+  margin-right: 1rem;
 }
 
 .nav-list .nav-item .link {
@@ -119,7 +122,6 @@ header {
 
 .nav-body {
   padding: 1rem;
-  overflow-y: auto;
 }
 
 .nav-title {
@@ -202,7 +204,7 @@ header {
     box-shadow: 0 2px 10px 0 rgba(36, 50, 66, .075);
 
     & nav {
-      background-color: #ffff !important;
+      background-color: var(--nav-color) !important;
     }
   }
 
