--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   max-width: 100%;
   color: #212529;
-  background-color: #fff;
+  background-color: var(--body-color);
   background-clip: padding-box;
   outline: 0;
   position: fixed;
@@ -25,7 +25,6 @@
 
 .sidenav-body {
   padding: 1rem;
-  overflow-y: auto;
 }
 
 .sidenav-title {
@@ -43,6 +42,7 @@
 
 .sidenav-body {
   display: flex;
+  flex-direction: column;
   padding: 0;
 }
 
