--- a/src/app/layouts/landing/landing.component.html
+++ b/src/app/layouts/landing/landing.component.html
@@ -2,11 +2,10 @@
   <div class="container">
     <div class="landing">
       <div class="landing-details" appFade="up">
-        <h3 class="profession">Web Developer</h3>
-        <h1>Kate Moore</h1>
+        <h3 class="profession">Data Engineer</h3>
+        <h1>Abdellah WADJINNY</h1>
         <p class="description">I design and develop services for customers of all sizes,
-          specializing in creating stylish, modern websites, web
-          services and online stores.</p>
+          specializing in creating Data products.</p>
         <ul class="social-icons-container">
           <li>
             <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
@@ -41,7 +40,7 @@
         </ul>
       </div>
       <div class="landing-img">
-        <img ngSrc="assets/img/banner.png" alt="Kate Moore" width="500" height="800" priority>
+        <img ngSrc="assets/img/banner.png" alt="Abdellah WADJINNY" width="500" height="800" priority>
       </div>
     </div>
   </div>
