--- a/src/app/layouts/about/about.component.html
+++ b/src/app/layouts/about/about.component.html
@@ -3,13 +3,11 @@
     <div class="about">
       <div class="about-details" appFade="up" [delay]="200">
         <h2>About Me</h2>
-        <h3 class="subtitle">An enthusiastic Web Developer based in California</h3>
-        <p class="first-desc">I'm very passionate and dedicated to my work. With 5 years experience as a professional
-          web developer, I have acquired the skills and knowledge necessary to make your project a success. Having
-          worked on
-          various projects that are already live, I can help you with the best possible suggestions and ideas that we
-          can proceed with.</p>
-        <a href="assets/img/about.png" download="proposed_file_name">
+        <h3 class="subtitle">An enthusiastic Data Engineer</h3>
+        <p class="first-desc">As an experienced Data Engineer, I have acquired over {{yearsOfExperience}} years' experience in setting up Data platforms. My expertise covers all stages of implementation, from creating the cloud infrastructure to setting up data pipelines and CI/CD pipelines to ensure the sustainability and maintainability of the data platform, while minimizing cloud-related costs.
+
+          I have worked in various sectors such as asset management, HR and e-commerce. In addition, my experience in entrepreneurship has enabled me to understand the customer's needs and to be closer to their business expectations in order to get the most out of the Data platform.</p>
+        <a href="assets/doc/Abdellah_WADJINNY_En.pdf" download="Abdellah_WADJINNY_En.pdf">
           <button class="btn">Download CV</button>
         </a>
       </div>
