--- a/src/app/layouts/resume/resume.component.html
+++ b/src/app/layouts/resume/resume.component.html
@@ -14,78 +14,108 @@
         <div class="experience-card-details">
           <h3 class="experience-card-details-title">Mailebo</h3>
           <p>I created [https://mailebo.com](https://mailebo.com/) a company that aims to simplify the management of corporate email boxes.</p>
-          <!-- Project details can be added here -->
+          <h4>Project:</h4>
+          <ul>
+            <li>Create a mailbox that allows automatic mail management.</li>
+            <li>Develop a Python programming interface integrated with Mailebo, in order to define precise and adapted actions for handling all types of email.</li>
+            <li>Secure the tool with an authentication and license verification system.</li>
+            <li>Create a website.</li>
+            <li>Build Mailebo's digital presence: Youtube, Linkedin.</li>
+          </ul>
+          <p><strong>Technologies:</strong> Python, PyQt, Terraform, Azure Functions, Azure Web Apps, Azure Storage, SQL Server, Azure VMs, Github Actions, Docker.</p>
         </div>
       </div>
-
-      <!-- Singulier - Data Engineer -->
       <div class="experience-card" appFade="up" [delay]="200">
         <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Data Engineer at Singulier</h3>
-          <span class="experience-card-info-date">Singulier | Remote</span>
-          <span class="experience-card-info-date">May 2023 - Present</span>
+          <h3 class="experience-card-info-title">Front-End Developer</h3>
+          <span class="experience-card-info-date">GitHub | Office</span>
+          <span class="experience-card-info-date">Jan 2020 - Nov 2022</span>
           <div>
-            <span class="experience-card-info-badge">Full Time</span>
+            <span class="experience-card-info-badge">Part Time</span>
           </div>
         </div>
         <div class="experience-card-details">
-          <h3 class="experience-card-details-title">Projects at Singulier</h3>
-          <!-- Project details for Singulier can be added here -->
+          <h3 class="experience-card-details-title">GitHub Inc</h3>
+          <p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor.</p>
         </div>
       </div>
-
-      <!-- LYXOR Asset Management - Data Engineer/Analyst -->
       <div class="experience-card" appFade="up" [delay]="400">
         <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Data Engineer/Analyst at LYXOR Asset Management</h3>
-          <span class="experience-card-info-date">LYXOR Asset Management</span>
-          <span class="experience-card-info-date">Nov 2019 - Jun 2021</span>
+          <h3 class="experience-card-info-title">Web Developer</h3>
+          <span class="experience-card-info-date">Airbnb | Remote</span>
+          <span class="experience-card-info-date">Apr 2017 - Jan 2020</span>
           <div>
             <span class="experience-card-info-badge">Full Time</span>
           </div>
         </div>
         <div class="experience-card-details">
-          <h3 class="experience-card-details-title">Projects at LYXOR</h3>
-          <!-- Project details for LYXOR Asset Management can be added here -->
-        </div>
-      </div>
-
-      <!-- Enedis - Data Scientist -->
-      <div class="experience-card" appFade="up" [delay]="600">
-        <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Data Scientist at Enedis</h3>
-          <span class="experience-card-info-date">Enedis</span>
-          <span class="experience-card-info-date">Sep 2018 - Sep 2019</span>
-          <div>
-            <span class="experience-card-info-badge">Full Time</span>
-          </div>
-        </div>
-        <div class="experience-card-details">
-          <h3 class="experience-card-details-title">Projects at Enedis</h3>
-          <!-- Project details for Enedis can be added here -->
-        </div>
-      </div>
-
-      <!-- CEA - Python Developer -->
-      <div class="experience-card" appFade="up" [delay]="800">
-        <div class="experience-card-info">
-          <h3 class="experience-card-info-title">Python Developer at CEA</h3>
-          <span class="experience-card-info-date">CEA</span>
-          <span class="experience-card-info-date">May 2018 - Aug 2018</span>
-          <div>
-            <span class="experience-card-info-badge">Full Time</span>
-          </div>
-        </div>
-        <div class="experience-card-details">
-          <h3 class="experience-card-details-title">Projects at CEA</h3>
-          <!-- Project details for CEA can be added here -->
+          <h3 class="experience-card-details-title">Airbnb Inc</h3>
+          <p>Adipisicing Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor.</p>
         </div>
       </div>
     </div>
     <hr>
     <h2>Education & Skills</h2>
     <div class="education-skill">
-      <!-- Education details can be added here -->
+      <div class="education" appFade="up">
+        <div class="education-card">
+          <span class="education-date">2013-2016</span>
+          <h3 class="education-title">Master of Technology</h3>
+          <span class="education-institute">Harvard University</span>
+        </div>
+        <div class="education-card">
+          <span class="education-date">2009-2012</span>
+          <h3 class="education-title">Bachelor of Technology</h3>
+          <span class="education-institute">Somerset School of Science</span>
+        </div>
+        <div class="education-card">
+          <span class="education-date">2003-2008</span>
+          <h3 class="education-title">Higher Secondary Education</h3>
+          <span class="education-institute">Marble Hills Middle School</span>
+        </div>
+      </div>
+      <div class="skill" appFade="up" [delay]="200">
+        <div class="skill-card">
+          <h3 class="skill-count">92%</h3>
+          <div class="skill-info">
+            <h4 class="skill-title">HTML</h4>
+            <div class="skill-progress">
+              <div class="skill-progress-inner skill-progress-90"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-card">
+          <h3 class="skill-count">85%</h3>
+          <div class="skill-info">
+            <h4 class="skill-title">CSS</h4>
+            <div class="skill-progress">
+              <div class="skill-progress-inner skill-progress-85"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-card">
+          <h3 class="skill-count">90%</h3>
+          <div class="skill-info">
+            <h4 class="skill-title">Javascript</h4>
+            <div class="skill-progress">
+              <div class="skill-progress-inner skill-progress-90"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-card">
+          <h3 class="skill-count">80%</h3>
+          <div class="skill-info">
+            <h4 class="skill-title">Ionic</h4>
+            <div class="skill-progress">
+              <div class="skill-progress-inner"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
